Fix the bottom gap for smaller displays

--- a/ui/css/main.css
+++ b/ui/css/main.css
@@ -10,7 +10,7 @@ max-width: 100%;
 }
 main{
 background: lightgray;
-min-height: 1400px;
+min-height: 1200px;
 }
 picture img{
 min-height: 100px;	 
